--- a/src/assets/sass/vars.sass
+++ b/src/assets/sass/vars.sass
@@ -1,4 +1,5 @@
-$primary: #6930C3
-$dark: #11052C
+$primary: #6930c3
+$primary-light: #8968d3
+$background: #070212
 $whiteish: rgba(255, 255, 255, .75)
 $hr: 1px solid rgba(255, 255, 255, .1)
